--- a/data/interfaces/unit_properties_selection.ui
+++ b/data/interfaces/unit_properties_selection.ui
@@ -15,9 +15,9 @@
       <object class="GtkScrolledWindow">
         <property name="vexpand">True</property>
         <property name="vexpand-set">True</property>
-        <child>
+        <property name="child">
           <object class="GtkListView" id="properties_selection"/>
-        </child>
+        </property>
       </object>
     </child>
     <child>
