--- a/data/interfaces/unit_properties_selection_row.ui
+++ b/data/interfaces/unit_properties_selection_row.ui
@@ -11,30 +11,11 @@
     <property name="margin-top">5</property>
     <property name="row-spacing">5</property>
     <child>
-      <object class="GtkLabel">
-        <property name="css-classes">dim-label</property>
-        <property name="label">Interface</property>
-        <layout>
-          <property name="column">0</property>
-          <property name="row">0</property>
-        </layout>
-      </object>
-    </child>
-    <child>
-      <object class="GtkLabel">
-        <property name="css-classes">dim-label</property>
-        <property name="label">Property</property>
-        <layout>
-          <property name="column">0</property>
-          <property name="row">1</property>
-        </layout>
-      </object>
-    </child>
-    <child>
       <object class="GtkLabel" id="interface">
+        <property name="css-classes">dim-label</property>
         <property name="xalign">0.0</property>
         <layout>
-          <property name="column">1</property>
+          <property name="column">0</property>
           <property name="row">0</property>
         </layout>
       </object>
@@ -47,40 +28,31 @@
         </attributes>
         <layout>
           <property name="column">1</property>
-          <property name="row">1</property>
+          <property name="column-span">2</property>
+          <property name="row">0</property>
         </layout>
       </object>
     </child>
     <child>
       <object class="GtkBox">
-        <property name="halign">end</property>
-        <property name="hexpand">True</property>
+        <property name="spacing">5</property>
         <child>
           <object class="GtkButton" id="move_up_button">
-            <property name="css-classes">round</property>
+            <property name="css-classes">circular</property>
             <property name="icon-name">go-up-symbolic</property>
             <signal name="clicked" handler="move_up_clicked" swapped="yes"/>
           </object>
         </child>
         <child>
           <object class="GtkButton" id="move_down_button">
-            <property name="css-classes">round</property>
+            <property name="css-classes">circular</property>
             <property name="icon-name">go-down-symbolic</property>
             <signal name="clicked" handler="move_down_clicked" swapped="yes"/>
           </object>
         </child>
-        <child>
-          <object class="GtkButton" id="delete_button">
-            <property name="css-classes">round
-destructive-action</property>
-            <property name="icon-name">window-close-symbolic</property>
-            <signal name="clicked" handler="delete_clicked" swapped="yes"/>
-          </object>
-        </child>
         <layout>
-          <property name="column">2</property>
-          <property name="column-span">2</property>
-          <property name="row">0</property>
+          <property name="column">0</property>
+          <property name="row">1</property>
         </layout>
       </object>
     </child>
@@ -95,7 +67,117 @@ destructive-action</property>
           <object class="GtkCheckButton" id="hidden_ckeck"/>
         </child>
         <layout>
-          <property name="column">1</property>
+          <property name="column">0</property>
+          <property name="row">2</property>
+        </layout>
+      </object>
+    </child>
+    <child>
+      <object class="GtkLabel">
+        <property name="label">Width</property>
+        <property name="xalign">0.0</property>
+        <layout>
+          <property name="column">2</property>
+          <property name="column-span">1</property>
+          <property name="row">2</property>
+          <property name="row-span">1</property>
+        </layout>
+      </object>
+    </child>
+    <child>
+      <object class="GtkLabel">
+        <property name="label">Resizable</property>
+        <property name="xalign">0.0</property>
+        <layout>
+          <property name="column">2</property>
+          <property name="row">3</property>
+        </layout>
+      </object>
+    </child>
+    <child>
+      <object class="GtkLabel">
+        <property name="label">Expands</property>
+        <property name="xalign">0.0</property>
+        <layout>
+          <property name="column">2</property>
+          <property name="row">4</property>
+        </layout>
+      </object>
+    </child>
+    <child>
+      <object class="GtkLabel">
+        <property name="label">Title</property>
+        <property name="xalign">0.0</property>
+        <layout>
+          <property name="column">2</property>
+          <property name="row">1</property>
+        </layout>
+      </object>
+    </child>
+    <child>
+      <object class="GtkSwitch" id="resizable_switch">
+        <property name="halign">start</property>
+        <property name="valign">center</property>
+        <layout>
+          <property name="column">3</property>
+          <property name="row">3</property>
+        </layout>
+      </object>
+    </child>
+    <child>
+      <object class="GtkSwitch" id="expand_switch">
+        <property name="halign">start</property>
+        <property name="valign">center</property>
+        <layout>
+          <property name="column">3</property>
+          <property name="row">4</property>
+        </layout>
+      </object>
+    </child>
+    <child>
+      <object class="GtkEntry" id="title_entry">
+        <property name="buffer">
+          <object class="GtkEntryBuffer"/>
+        </property>
+        <property name="width-chars">40</property>
+        <layout>
+          <property name="column">3</property>
+          <property name="row">1</property>
+        </layout>
+      </object>
+    </child>
+    <child>
+      <object class="GtkBox">
+        <property name="halign">end</property>
+        <property name="hexpand">True</property>
+        <child>
+          <object class="GtkButton" id="delete_button">
+            <property name="css-classes">round
+destructive-action</property>
+            <property name="icon-name">window-close-symbolic</property>
+            <signal name="clicked" handler="delete_clicked" swapped="yes"/>
+          </object>
+        </child>
+        <layout>
+          <property name="column">4</property>
+          <property name="row">0</property>
+        </layout>
+      </object>
+    </child>
+    <child>
+      <object class="GtkSpinButton" id="width_spin">
+        <property name="adjustment">
+          <object class="GtkAdjustment">
+            <property name="lower">-1.0</property>
+            <property name="page-increment">10.0</property>
+            <property name="step-increment">1.0</property>
+            <property name="upper">10000.0</property>
+          </object>
+        </property>
+        <property name="halign">start</property>
+        <property name="max-width-chars">6</property>
+        <layout>
+          <property name="column">3</property>
           <property name="row">2</property>
         </layout>
       </object>
