--- a/data/interfaces/shortcuts.ui
+++ b/data/interfaces/shortcuts.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.96.0 -->
+<!-- Created with Cambalache 0.96.1 -->
 <interface>
   <!-- interface-name shortcuts.ui -->
   <requires lib="gtk" version="4.6"/>
@@ -34,6 +34,12 @@
               <object class="GtkShortcutsShortcut">
                 <property name="action-name">app.list_boots</property>
                 <property name="title" translatable="yes" context="shortcut window">Open List Boots</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="action-name">app.properties_selector</property>
+                <property name="title" translatable="yes" context="shortcut window">Open columns manager</property>
               </object>
             </child>
           </object>
