--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -76,8 +76,21 @@
                       </object>
                     </child>
                     <child>
-                      <object class="AdwExpanderRow" id="unit_list_columns">
-                        <property name="title" translatable="yes" context="preference" comments="title">Columns Display Parameters</property>
+                      <object class="AdwActionRow">
+                        <property name="title">Columns Display Parameters</property>
+                        <child>
+                          <object class="GtkButton" id="show_customize_button">
+                            <property name="action-name">app.properties_selector</property>
+                            <property name="label" translatable="yes" context="unit search"/>
+                            <property name="valign">baseline-center</property>
+                            <child>
+                              <object class="AdwButtonContent">
+                                <property name="icon-name">columns-symbolic</property>
+                                <property name="label">Columns</property>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
                       </object>
                     </child>
                   </object>
