--- a/data/interfaces/unit_control_panel.ui
+++ b/data/interfaces/unit_control_panel.ui
@@ -2,8 +2,8 @@
 <!-- Created with Cambalache 0.96.1 -->
 <interface>
   <!-- interface-name unit_control_panel.ui -->
-  <requires lib="gtk" version="4.12"/>
-  <requires lib="libadwaita" version="1.4"/>
+  <requires lib="gtk" version="4.18"/>
+  <requires lib="libadwaita" version="1.7"/>
   <template class="UnitControlPanel" parent="GtkBox">
     <property name="orientation">vertical</property>
     <property name="spacing">5</property>
@@ -133,6 +133,8 @@
             </child>
             <child>
               <object class="AdwViewStack" id="unit_panel_stack">
+                <property name="vexpand">True</property>
+                <property name="vexpand-set">True</property>
                 <child>
                   <object class="AdwViewStackPage">
                     <property name="child">
