--- a/data/interfaces/unit_list_filter.ui
+++ b/data/interfaces/unit_list_filter.ui
@@ -28,13 +28,31 @@
             <property name="sidebar">
               <object class="AdwNavigationPage">
                 <property name="child">
-                  <object class="GtkBox" id="filter_navigation_container">
+                  <object class="GtkBox">
                     <property name="margin-bottom">7</property>
                     <property name="margin-end">7</property>
                     <property name="margin-start">7</property>
                     <property name="margin-top">7</property>
                     <property name="orientation">vertical</property>
                     <property name="spacing">5</property>
+                    <child>
+                      <object class="GtkScrolledWindow">
+                        <child>
+                          <object class="GtkBox" id="filter_navigation_container">
+                            <property name="orientation">vertical</property>
+                            <property name="vexpand">True</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkButton">
+                        <property name="hexpand">True</property>
+                        <property name="label" translatable="yes" comments="Unit property filter button">Clear Filters</property>
+                        <property name="valign">end</property>
+                        <signal name="clicked" handler="clear_all_filters_button_clicked" swapped="yes"/>
+                      </object>
+                    </child>
                   </object>
                 </property>
                 <property name="title">Side</property>
