--- a/data/interfaces/unit_control_panel.ui
+++ b/data/interfaces/unit_control_panel.ui
@@ -107,7 +107,7 @@
                 <child>
                   <object class="AdwButtonContent">
                     <property name="can-shrink">True</property>
-                    <property name="icon-name">panel-right-symbolic</property>
+                    <property name="icon-name">dock-right-symbolic</property>
                     <property name="label" translatable="yes" context="controls menu">_More ...</property>
                     <property name="use-underline">True</property>
                   </object>
