streamline the filtering

--- a/data/interfaces/unit_list_search.ui
+++ b/data/interfaces/unit_list_search.ui
@@ -26,15 +26,15 @@
     </child>
     <child>
       <object class="GtkButton" id="show_filter_button">
+        <property name="action-name">win.unit_list_filter_blank</property>
         <property name="label" translatable="yes" context="unit search">Filters</property>
-        <signal name="clicked" handler="show_filters_clicked"/>
       </object>
     </child>
     <child>
       <object class="GtkButton" id="clear_filters_button">
+        <property name="action-name">win.unit_list_filter_clear</property>
         <property name="css-classes">flat</property>
         <property name="label" translatable="yes" context="unit search">Clear Filters</property>
-        <signal name="clicked" handler="clear_filter_clicked"/>
       </object>
     </child>
   </template>
